# rustvision

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
src/: index.html  main.rs  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
